# mcp-ssh-server

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
python-package/: LICENSE  README.md  pyproject.toml
python-package/claude_ssh_mcp/: __init__.py
python-package/claude_ssh_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: cli.ts  index.ts
